Edit File to Isolate Pylint
Isolated linting to have its own individual test to produce a review of a pull request which just summarizes linting result rather than both linting and testing combined.

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,4 +1,4 @@
-name: Pylint and Pytest
+name: Pylint
 
 on: 
   pull_request:
@@ -24,7 +24,3 @@ jobs:
       if: always()
       run: |
         pylint $(git ls-files '*.py')
-    - name: Test with pytest
-      if: always()
-      run: |
-        pytest -v $(git ls-files 'test_*.py')
